# behavspec

./: .gitignore  Readme.md
CS/: AVgroup.hpp  CMakeLists.txt  Genotype.hpp  Phenotype.hpp  Speci.cpp  SpeciCode.cpp  SpeciCode.hpp
CS/Data/: Run_g99_deg02Q1a0prw00.toml  Run_g99_deg02Q1a1prw00.toml  Run_g99_deg02Q1a1prw01.toml  Run_g99_deg08Q1a1prw00.toml  Run_g99_deg08Q1a1prw01.toml  Run_g99_deg98Q1a0prw00.toml  Run_g99_deg98Q1a1prw00.toml  h5_funcs.R
HD/: AVgroup.hpp  Phenotype.hpp  SWgraph.hpp  SpeciCode.cpp  SpeciCode.hpp  Utils.hpp  hdf5code.hpp
HD/Data/: Run_g99_deg02Q1a0prw00.toml  Run_g99_deg02Q1a1prw00.toml  Run_g99_deg02Q1a1prw01.toml  Run_g99_deg08Q1a1prw00.toml  Run_g99_deg08Q1a1prw01.toml  Run_g99_deg98Q1a0prw00.toml  Run_g99_deg98Q1a1prw00.toml  h5_funcs.R
PS/: AVgroup.hpp  Individual.hpp  Phenotype.hpp  SpeciCode.cpp  SpeciCode.hpp  Utils.cpp  hdf5code.cpp
PS/Data/: Run_g99_deg04Q1a1prw00.toml  h5_funcs.R
